# wichert-os

./: .gitignore  README.md  index.html  notizen für jonas.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/Workflows/: ci.yml
src/: index.css  index.tsx  main - Kopie.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: drive_api.rs  drive_oauth.rs  drive_token.rs  gmail.rs  gmail_token.rs  lib.rs  main.rs
src/app/: App - Kopie.tsx  App.tsx  ErrorBoundary.tsx  router.tsx
src/app/providers/: AppProviders.tsx  ErrorBoundary.tsx  useDeps.ts
src/app/registry/: module.registry.tsx  types.ts
src/app/shell/: AppShell.tsx
src/components/: CommandPalette.tsx  ErrorBoundary.tsx
src/components/layout/: AppHeader.tsx  RootLayout.tsx
src/components/pipeline/: PipelineBoard.tsx  PipelineCard.tsx  PipelineColumn.tsx
src/components/ui/: IconButton.tsx  Toast.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  contact-modal.tsx  input.tsx  modal.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  textarea.tsx
src/db/: index.ts
src/hooks/: useDarkMode.ts
src/lib/: logger.ts
src/modules/: Dashboard.tsx  Header.tsx
src/modules/Contacts/: ContactsPanel.tsx
src/modules/Gmail/: GmailPanelSkeleton.tsx
src/pages/: EmailsPage.tsx  FamilyCalendarPage.tsx  FamilyPage.tsx  HomePage.tsx  SyncPage.tsx  TasksCalendarPage.tsx  TasksPage.tsx
src/shared/: types.ts  version.ts
src/storage/: db.ts  export.ts  import.ts  migrate.ts
src/store/: pipeline.ts
src/types/: pipeline.tsx
src/utils/: env.ts  id.ts
(+31 files in other folders)
