
[package]
name = "wichert-os"
version = "0.1.0"
description = "Wichert OS – Desktop Shell"
authors = ["Jonas Wichert"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
