[package]
name = "app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# Tauri v2 – auf 2.8.4 gepinnt, passend zu deiner CLI
tauri = { version = "=2.8.4", features = [] }

# Plugins, die wir WIRKLICH nutzen
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"

# Rust-Logging (nur tracing, KEIN plugin-log, KEIN log-crate)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
opt-level = 3
